# screen_saver

./: .gitmodules  CMakeLists.txt  README.md  config.ini  main.cpp  test.cpp
.github/workflows/: c-cpp.yml  clang.yml  gcc.yml
include/: config.hpp  debug.hpp  dimension.hpp  images.hpp  screen.hpp  time.hpp
